// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSelectable custom options with data 1`] = `
<div
  class="euiSelectable"
>
  <div
    class="euiSelectableList"
    data-test-subj="euiSelectableList"
  >
    <div
      data-eui="EuiAutoSizer"
    >
      <div
        class="euiSelectableList__list"
        style="position: relative; height: 96px; width: 600px; overflow: auto; will-change: transform; direction: ltr;"
        tabindex="-1"
      >
        <ul
          aria-multiselectable="true"
          id="generated-id_listbox"
          role="listbox"
          style="height: 96px; width: 100%;"
          tabindex="0"
        >
          <li
            aria-checked="false"
            aria-posinset="1"
            aria-selected="false"
            aria-setsize="3"
            class="euiSelectableListItem euiSelectableListItem--paddingSmall"
            id="generated-id_listbox_option-0"
            role="option"
            style="position: absolute; left: 0px; top: 0px; height: 32px; width: 100%;"
            title="Titan"
          >
            <span
              class="euiSelectableListItem__content"
            >
              <span
                class="euiSelectableListItem__icon"
                data-euiicon-type="empty"
              />
              <span
                class="euiSelectableListItem__text euiSelectableListItem__text--truncate"
              >
                <span>
                  VI
                  : 
                  Titan
                </span>
              </span>
            </span>
          </li>
          <li
            aria-checked="false"
            aria-posinset="2"
            aria-selected="false"
            aria-setsize="3"
            class="euiSelectableListItem euiSelectableListItem--paddingSmall"
            id="generated-id_listbox_option-1"
            role="option"
            style="position: absolute; left: 0px; top: 32px; height: 32px; width: 100%;"
            title="Enceladus"
          >
            <span
              class="euiSelectableListItem__content"
            >
              <span
                class="euiSelectableListItem__icon"
                data-euiicon-type="empty"
              />
              <span
                class="euiSelectableListItem__text euiSelectableListItem__text--truncate"
              >
                <span>
                  II
                  : 
                  Enceladus
                </span>
              </span>
            </span>
          </li>
          <li
            aria-checked="false"
            aria-posinset="3"
            aria-selected="false"
            aria-setsize="3"
            class="euiSelectableListItem euiSelectableListItem--paddingSmall"
            id="generated-id_listbox_option-2"
            role="option"
            style="position: absolute; left: 0px; top: 64px; height: 32px; width: 100%;"
            title="Pandora is one of Saturn's moons, named for a Titaness of Greek mythology"
          >
            <span
              class="euiSelectableListItem__content"
            >
              <span
                class="euiSelectableListItem__icon"
                data-euiicon-type="empty"
              />
              <span
                class="euiSelectableListItem__text euiSelectableListItem__text--truncate"
              >
                <span>
                  XVII
                  : 
                  Pandora is one of Saturn's moons, named for a Titaness of Greek mythology
                </span>
              </span>
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiSelectable errorMessage prop can render an element as the message 1`] = `
<div
  class="euiSelectable"
>
  <div
    class="euiText euiSelectableMessage emotion-euiText-xs-euiTextColor-subdued"
    data-test-subj="euiSelectableMessage"
    id="generated-id_messageContent"
  >
    <span>
      Element error!
    </span>
  </div>
</div>
`;

exports[`EuiSelectable errorMessage prop does not render the message when not defined 1`] = `
<div
  class="euiSelectable"
>
  <div
    class="euiSelectableList"
    data-test-subj="euiSelectableList"
  >
    <div
      data-eui="EuiAutoSizer"
    >
      <div
        class="euiSelectableList__list"
        style="position: relative; height: 96px; width: 600px; overflow: auto; will-change: transform; direction: ltr;"
        tabindex="-1"
      >
        <ul
          aria-multiselectable="true"
          id="generated-id_listbox"
          role="listbox"
          style="height: 96px; width: 100%;"
          tabindex="0"
        >
          <li
            aria-checked="false"
            aria-posinset="1"
            aria-selected="false"
            aria-setsize="3"
            class="euiSelectableListItem euiSelectableListItem--paddingSmall"
            data-test-subj="titanOption"
            id="generated-id_listbox_option-0"
            role="option"
            style="position: absolute; left: 0px; top: 0px; height: 32px; width: 100%;"
            title="Titan"
          >
            <span
              class="euiSelectableListItem__content"
            >
              <span
                class="euiSelectableListItem__icon"
                data-euiicon-type="empty"
              />
              <span
                class="euiSelectableListItem__text euiSelectableListItem__text--truncate"
              >
                <span>
                  Titan
                </span>
              </span>
            </span>
          </li>
          <li
            aria-checked="false"
            aria-posinset="2"
            aria-selected="false"
            aria-setsize="3"
            class="euiSelectableListItem euiSelectableListItem--paddingSmall"
            id="generated-id_listbox_option-1"
            role="option"
            style="position: absolute; left: 0px; top: 32px; height: 32px; width: 100%;"
            title="Enceladus"
          >
            <span
              class="euiSelectableListItem__content"
            >
              <span
                class="euiSelectableListItem__icon"
                data-euiicon-type="empty"
              />
              <span
                class="euiSelectableListItem__text euiSelectableListItem__text--truncate"
              >
                <span>
                  Enceladus
                </span>
              </span>
            </span>
          </li>
          <li
            aria-checked="false"
            aria-posinset="3"
            aria-selected="false"
            aria-setsize="3"
            class="euiSelectableListItem euiSelectableListItem--paddingSmall"
            id="generated-id_listbox_option-2"
            role="option"
            style="position: absolute; left: 0px; top: 64px; height: 32px; width: 100%;"
            title="Pandora is one of Saturn's moons, named for a Titaness of Greek mythology"
          >
            <span
              class="euiSelectableListItem__content"
            >
              <span
                class="euiSelectableListItem__icon"
                data-euiicon-type="empty"
              />
              <span
                class="euiSelectableListItem__text euiSelectableListItem__text--truncate"
              >
                <span>
                  Pandora is one of Saturn's moons, named for a Titaness of Greek mythology
                </span>
              </span>
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiSelectable errorMessage prop does renders the message when defined 1`] = `
<div
  class="euiSelectable"
>
  <div
    class="euiText euiSelectableMessage emotion-euiText-xs-euiTextColor-subdued"
    data-test-subj="euiSelectableMessage"
    id="generated-id_messageContent"
  >
    <p>
      Error!
    </p>
  </div>
</div>
`;

exports[`EuiSelectable is rendered 1`] = `
<div
  class="euiSelectable testClass1 testClass2 emotion-euiTestCss"
  data-test-subj="test subject string"
  id="testId"
/>
`;

exports[`EuiSelectable props allowExclusions 1`] = `
<div
  class="euiSelectable"
/>
`;

exports[`EuiSelectable props height can be forced 1`] = `
<div
  class="euiSelectable"
/>
`;

exports[`EuiSelectable props height can be full 1`] = `
<div
  class="euiSelectable euiSelectable-fullHeight"
/>
`;

exports[`EuiSelectable props isLoading 1`] = `
<div
  class="euiSelectable"
/>
`;

exports[`EuiSelectable props listProps 1`] = `
<div
  class="euiSelectable"
/>
`;

exports[`EuiSelectable props renderOption 1`] = `
<div
  class="euiSelectable"
/>
`;

exports[`EuiSelectable props searchable 1`] = `
<div
  class="euiSelectable"
/>
`;

exports[`EuiSelectable props singleSelection 1`] = `
<div
  class="euiSelectable"
/>
`;

exports[`EuiSelectable search value supports inheriting initialSearchValue from searchProps.defaultValue 1`] = `
<div
  class="euiSelectable"
>
  <div
    class="emotion-euiScreenReaderOnly"
  >
    <div
      aria-atomic="true"
      aria-live="polite"
      role="status"
    >
      <p>
        <strong>
          default value
        </strong>
         doesn't match any options
      </p>
    </div>
    <div
      aria-atomic="true"
      aria-hidden="true"
      aria-live="off"
      role="status"
    />
  </div>
  <div
    class="euiText euiSelectableMessage emotion-euiText-xs-euiTextColor-subdued"
    data-test-subj="euiSelectableMessage"
    id="generated-id_messageContent"
  >
    <p>
      <strong>
        default value
      </strong>
       doesn't match any options
    </p>
  </div>
  <div
    class="euiFormControlLayout euiFormControlLayout--fullWidth"
  >
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <div
        class="euiFormControlLayoutIcons euiFormControlLayoutIcons--left euiFormControlLayoutIcons--absolute"
      >
        <span
          class="euiFormControlLayoutCustomIcon"
        >
          <span
            aria-hidden="true"
            class="euiFormControlLayoutCustomIcon__icon"
            data-euiicon-type="search"
          />
        </span>
      </div>
      <input
        aria-activedescendant=""
        aria-describedby="generated-id_instructions"
        aria-haspopup="listbox"
        aria-label="Filter options"
        autocomplete="off"
        class="euiFieldSearch euiFormControlLayout--1icons euiFieldSearch--fullWidth euiFieldSearch-isClearable euiSelectableSearch"
        data-test-subj="searchInput"
        placeholder="Filter options"
        type="search"
        value="default value"
      />
      <div
        class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right euiFormControlLayoutIcons--absolute"
      >
        <button
          aria-label="Clear input"
          class="euiFormControlLayoutClearButton"
          data-test-subj="clearSearchButton"
          type="button"
        >
          <span
            class="euiFormControlLayoutClearButton__icon"
            data-euiicon-type="cross"
          />
        </button>
      </div>
    </div>
  </div>
  <p
    class="emotion-euiScreenReaderOnly"
    id="generated-id_instructions"
  >
     
    Use the Up and Down arrow keys to move focus over options. Press Enter to select. Press Escape to collapse options.
  </p>
</div>
`;

exports[`EuiSelectable should not reset the activeOptionIndex nor isFocused when EuiSelectable is blurred in favour of its search/listbox 1`] = `
Object {
  "activeOptionIndex": 0,
  "isFocused": true,
  "searchValue": "",
  "visibleOptions": Array [
    Object {
      "data-test-subj": "titanOption",
      "label": "Titan",
    },
    Object {
      "label": "Enceladus",
    },
    Object {
      "label": "Pandora is one of Saturn's moons, named for a Titaness of Greek mythology",
    },
  ],
}
`;

exports[`EuiSelectable should not reset the activeOptionIndex nor isFocused when EuiSelectable is blurred in favour of its search/listbox 2`] = `
Object {
  "activeOptionIndex": 0,
  "isFocused": true,
  "searchValue": "",
  "visibleOptions": Array [
    Object {
      "data-test-subj": "titanOption",
      "label": "Titan",
    },
    Object {
      "label": "Enceladus",
    },
    Object {
      "label": "Pandora is one of Saturn's moons, named for a Titaness of Greek mythology",
    },
  ],
}
`;
